waybar layout & styling

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,6 +27,7 @@ $terminal = ghostty
 $fileManager = dolphin
 $menu = wofi
 $browser = firefox
+$colorPicker = hyprpicker
 
 
 #################
@@ -96,7 +97,7 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb(71CEAD)
+    col.active_border = rgb(0DDF88)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -253,6 +254,7 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, C, killactive,
 #bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = $mainMod, E, exec, $fileManager
+#bind = $mainMod SHIFT, P, $colorPicker
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu --show drun
 bind = $mainMod, P, pseudo, # dwindle
@@ -359,6 +361,7 @@ windowrule {
 
 # Provide blur for waybar
 layerrule = blur on, match:namespace waybar
+layerrule = ignore_alpha 0.1, match:namespace waybar
 
 # XWayland
 xwayland {
