waybar power script & updates change

--- a/.config/waybar/modules/custom/power.jsonc
+++ b/.config/waybar/modules/custom/power.jsonc
@@ -1,7 +1,7 @@
 {
   "custom/power": {
     "format": "󰤄",
-    "tooltip-format": "Power Options"
-    //"on-click": perhaps a script for wofi?
+    "tooltip": false,
+    "on-click": "~/.config/waybar/scripts/powermenu.sh"
   }
 }
