--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,8 +12,8 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor=eDP-2,highres,auto,1.33
-monitor=DP-2,highres,auto-right,1
-monitor=DP-3,highres,auto-center-right,1.33
+monitor=desc:Dell Inc. DELL U3415W F1T1W63F192L,highres,auto-right,1
+monitor=LG Electronics LG SDQHD 503NTAB3G520,highres,auto-center-right,1.33
 
 
 ###################
@@ -41,6 +41,7 @@ $colorPicker = hyprpicker
 # exec-once = nm-applet &
 exec-once = waybar & hyprpaper
 exec-once = systemctl --user start hyprpolkitagent
+exec-once = elephant && walker --gapplication-service
 
 
 #############################
@@ -52,6 +53,8 @@ exec-once = systemctl --user start hyprpolkitagent
 env = XCURSOR_THEME,Vimix-cursors
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+env = QT_QPA_PLATFORMTHEME,hyprqt6engine
 
 # Necessary for nvidia gpu to work with wayland
 env = LIBVA_DRIVER_NAME,nvidia
