fixed monitor in hyprland.conf

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor=eDP-2,highres,auto,1.33
 monitor=desc:Dell Inc. DELL U3415W F1T1W63F192L,highres,auto-right,1
-monitor=LG Electronics LG SDQHD 503NTAB3G520,highres,auto-center-right,1.33
+monitor=desc:LG Electronics LG SDQHD 503NTAB3G520,highres,auto-center-right,1.33
 
 
 ###################
