hypr kb language switch functionality + powermenu sizing

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -218,11 +218,13 @@ misc {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = us,no
     kb_variant =
     kb_model =
     kb_options =
     kb_rules =
+
+    kb_options = grp:win_space_toggle
 
     follow_mouse = 1
 
