--- a/.config/waybar/modules/temperature.jsonc
+++ b/.config/waybar/modules/temperature.jsonc
@@ -10,6 +10,7 @@
     "format-icons": [
       "", "", "", "", ""
     ],
-    "tooltip": false
+    "tooltip": false,
+    "on-click": "hyprctl dispatch exec 'ghostty -e btop'"
   }
 }
