--- a/.config/waybar/modules/cpu.jsonc
+++ b/.config/waybar/modules/cpu.jsonc
@@ -8,7 +8,7 @@
       "warning": 75,
       "critical": 90
     },
-    // "on-click": // execute btop
+    "on-click": "hyprctl dispatch exec 'ghostty -e btop'",
     // "on-click-middle": // ?
     // "on-click-right": // ?
     "tooltip": false
