moved wallpapers to config

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -2,18 +2,18 @@ splash = false
 
 wallpaper {
   monitor = eDP-2
-  path = ~/Pictures/Wallpapers/osaka-jade-bg-2.jpg
+  path = ~/.config/hypr/wallpapers/osaka-jade-bg-2.jpg
   fit_mode = cover
 }
 
 wallpaper {
   monitor = DP-2
-  path = ~/Pictures/Wallpapers/osaka-jade-bg-2.jpg
+  path = ~/.config/hypr/wallpapers/osaka-jade-bg-2.jpg
   fit_mode = cover
 }
 
 wallpaper {
   monitor = DP-3
-  path = ~/Pictures/Wallpapers/osaka-jade-bg-2.jpg
+  path = ~/.config/hypr/wallpapers/osaka-jade-bg-2.jpg
   fit_mode = cover
 }
