split hyprland.conf into multiple files

--- a/.config/waybar/modules/custom/menu.jsonc
+++ b/.config/waybar/modules/custom/menu.jsonc
@@ -1,6 +1,7 @@
 {
   "custom/menu": {
     "format": "󰍜",
-    "tooltip": false
+    "tooltip": false,
+    "on-click": "hyprctl dispatch exec walker"
   }
 }
