walker: blur on, less transparency

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -228,6 +228,7 @@ windowrule {
 
 # Provide blur for waybar
 layerrule = blur on, match:namespace waybar
+layerrule = blur on, match:namespace walker
 layerrule = ignore_alpha 0.1, match:namespace waybar
 
 # XWayland
