--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -40,6 +40,7 @@
     "custom/updates"
   ],
   "modules-right": [
+    "mpris",
     "custom/left_div#3",
     "group/pulseaudio",
     "custom/left_div#2",
