--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -226,12 +226,13 @@ windowrule {
     float = yes
 }
 
-# Provide blur for waybar
+# Provide blur for some layers
 layerrule = blur on, match:namespace waybar
 layerrule = blur on, match:namespace walker
 layerrule = ignore_alpha 0.1, match:namespace waybar
 
-# XWayland
+# Xwayland
 xwayland {
+  # XWayland apps should not scale on fractional monitors
   force_zero_scaling = true
 }
