--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -1,29 +1,62 @@
-###################
-### KEYBINDINGS ###
-###################
+############################
+###      MY PROGRAMS     ###
+############################
 
-# See https://wiki.hypr.land/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+$terminal = ghostty
+$fileManager = dolphin
+$menu = walker
+$browser = firefox
+$colorPicker = hyprpicker
+$notes = obsidian
 
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
+
+############################
+###     KEYBINDINGS      ###
+############################
+
+$mainMod = SUPER
+
+### Control Programs ###
+
+bind = $mainMod, P, exec, $menu
+bind = $mainMod, T, exec, $terminal
+bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, C, killactive,
-#bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = $mainMod, E, exec, $fileManager
-#bind = $mainMod SHIFT, P, $colorPicker
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod SHIFT, P, exec, $colorPicker -a
+bind = $mainMod, N, exec, $notes
 
-# Move focus with mainMod + arrow keys
+bind = $mainMod, C, killactive,
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, PERIOD, pseudo, # dwindle
+bind = $mainMod, COMMA, togglesplit, # dwindle
+
+### Windows: Focus ###
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, j, movefocus, d
+bind = $mainMod, k, movefocus, u
 
-# Switch workspaces with mainMod + [0-9]
+bind = $mainMod, m, layoutmsg, focusmaster
+
+### Windows: Move ###
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, J, movewindow, d
+bind = $mainMod SHIFT, K, movewindow, u
+
+bind = $mainMod CTRL, L, swapwindow, r
+bind = $mainMod CTRL, H, swapwindow, l
+bind = $mainMod CTRL, J, swapwindow, d
+bind = $mainMod CTRL, K, swapwindow, u
+
+bind = $maindMod SHIFT, m, layoutmsg, swapwithmaster master
+
+### Workspaces: Focus ###
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -35,7 +68,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+### Workspaces: Move Windows ###
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
