--- a/.config/waybar/modules/hyprland/window.jsonc
+++ b/.config/waybar/modules/hyprland/window.jsonc
@@ -13,7 +13,8 @@
       "^.*discord": "  Discord",
       "^.*obsidian": "󰚸  Obsidian",
       "^.*texstudio": "  TeXStudio",
-      "󰍹 ": "󰍹  Desktop"
+      "^.*font-manager": "  Font Manager",
+      "󰍹  ": "󰍹  Desktop"
     },
     "separate-outputs": false,
     "icon": false,
