keybinds and waybar changes

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -4,7 +4,7 @@
 
 $terminal = ghostty
 $fileManager = dolphin
-$menu = walker
+$menu = walker --height 848
 $browser = firefox
 $colorPicker = hyprpicker
 $notes = obsidian
@@ -18,8 +18,8 @@ $mainMod = SUPER
 
 ### Control Programs ###
 
-bind = $mainMod, P, exec, $menu
-bind = $mainMod, T, exec, $terminal
+bind = $mainMod, R, exec, $menu
+bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $fileManager
@@ -28,8 +28,16 @@ bind = $mainMod, N, exec, $notes
 
 bind = $mainMod, C, killactive,
 bind = $mainMod, V, togglefloating,
+
+### Layout Specific ###
+
+# Dwindle
 bind = $mainMod, PERIOD, pseudo, # dwindle
 bind = $mainMod, COMMA, togglesplit, # dwindle
+
+# master
+bind = $mainMod, m, layoutmsg, focusmaster
+bind = $mainMod SHIFT, m, layoutmsg, swapwithmaster master
 
 ### Windows: Focus ###
 bind = $mainMod, left, movefocus, l
@@ -41,7 +49,6 @@ bind = $mainMod, l, movefocus, r
 bind = $mainMod, j, movefocus, d
 bind = $mainMod, k, movefocus, u
 
-bind = $mainMod, m, layoutmsg, focusmaster
 
 ### Windows: Move ###
 bind = $mainMod SHIFT, L, movewindow, r
@@ -54,7 +61,6 @@ bind = $mainMod CTRL, H, swapwindow, l
 bind = $mainMod CTRL, J, swapwindow, d
 bind = $mainMod CTRL, K, swapwindow, u
 
-bind = $maindMod SHIFT, m, layoutmsg, swapwithmaster master
 
 ### Workspaces: Focus ###
 bind = $mainMod, 1, workspace, 1
@@ -94,6 +100,11 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Fullscreen a window
 bind = $mainMod, F, fullscreen
+
+# Control the split
+bind = $mainMod, EQUAL, splitratio, exact 1.0
+bind = $mainMod SHIFT, EQUAL, splitratio, 0.05
+bind = $mainMod, MINUS, splitratio, -0.05
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
