--- a/.config/waybar/modules/pulseaudio.jsonc
+++ b/.config/waybar/modules/pulseaudio.jsonc
@@ -33,9 +33,9 @@
     "min-length": 8,
     "max-length": 8,
     "scroll-step": 2.0,
-    // "on-click":
+    "on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle",
     // "on-click-middle":
-    // "on-click-right":
+    "on-click-right": "pavucontrol",
     // "on-scroll-up":
     // "on-scroll-down":
     // "smooth-scrolling-threshold":
@@ -58,14 +58,14 @@
     "min-length": 8,
     "max-length": 8,
     "scroll-step": 2.0,
-    // "on-click":
+    "on-click": "wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle",
     // "on-click-middle":
-    // "on-click-right":
-    // "on-scroll-up":
-    // "on-scroll-down":
+    "on-click-right": "pavucontrol",
+    "on-scroll-up": "wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SOURCE@ 2%+",
+    "on-scroll-down": "wpctl set-volume @DEFAULT_AUDIO_SOURCE@ 2%-",
     // "smooth-scrolling-threshold":
     "tooltip": true,
-    "tooltip-format": "Input Device: {desc}",
+    "tooltip-format": "Input Device: {source_desc}",
     "max-volume": 100
     // "ignored-sinks":
     // "reverse-scrolling":
